Fixed bug #41175 (addAttribute() fails to add an attribute with an empty value).