ext/simplexml/simplexml.c
@@ -1542,7 +1542,7 @@ SXE_METHOD(addAttribute)
 		return;
 	}
 
-	if (qname_len == 0 || value_len == 0) {
+	if (qname_len == 0) {
 		php_error_docref(NULL TSRMLS_CC, E_WARNING, "Attribute name and value are required");
 		return;
 	}
